Ajout de modifications sur la branche dev 2

--- a/git7.ipynb
+++ b/git7.ipynb
@@ -18,7 +18,8 @@
     "print(\"Hi goog morning everybody\")\n",
     "\n",
     "#chemin = \"C:\\PERSO\\WCS\\GIT\\GIT7\" (Attention il faudra \\\\)\n",
-    "chemin = r\"C:\\PERSO\\WCS\\GIT\\GIT7\""
+    "chemin = r\"C:\\PERSO\\WCS\\GIT\\GIT7\"\n",
+    "print(\"Modifications sur la branche dev\")"
    ]
   }
  ],
