--- a/git7.ipynb
+++ b/git7.ipynb
@@ -19,7 +19,8 @@
     "\n",
     "#chemin = \"C:\\PERSO\\WCS\\GIT\\GIT7\" (Attention il faudra \\\\)\n",
     "chemin = r\"C:\\PERSO\\WCS\\GIT\\GIT7\"\n",
-    "print(\"Modifications sur la branche dev\")"
+    "print(\"Modifications sur la branche dev\")",
+    "print(\"Modifications github vers vsc sur la branche dev\")"
    ]
   }
  ],
