commit 2 gh dev vers vsc

--- a/git7.ipynb
+++ b/git7.ipynb
@@ -20,8 +20,8 @@
     "#chemin = \"C:\\PERSO\\WCS\\GIT\\GIT7\" (Attention il faudra \\\\)\n",
     "chemin = r\"C:\\PERSO\\WCS\\GIT\\GIT7\"\n",
     "print(\"Modifications sur la branche dev\")",
-    "print(\"Modifications github vers vsc sur la branche dev\"\n)";
-    "print(\POP STAR)
+    "print(\"Modifications github vers vsc sur la branche dev\"\n)",
+    "print(\"POP STAR")
    ]
   }
  ],
